package com.uktm.javawfw.exception.urls;

public class URLMatchNotFoundException extends Exception {
}
