package com.uktm.javawfw.http.response;

import java.io.IOException;

public interface IResponse {
	public void sendResponse() throws IOException;
}
