package com.uktm.javawfw.middleware.response.base;

import com.uktm.javawfw.middleware.response.base.IResponseMiddleware;


public abstract class AbstractResponseMiddleware implements IResponseMiddleware {}
